[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "python-src-gen"
version = "0.1.0"
description = """
Generates stub python source files to check dev tools for "big projects"
handling.
"""
authors = "Grigory Petrov @grigoryvp"
license = "CC BY-NC-ND 4.0"

[tool.poetry.dependencies]
python = ">=3.7"
pip = ">=19.0"
click = ">=7.0"

[tool.poetry.scripts]
python-src-gen = "python-src-gen.app:cli"
